// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterPanel > Snapshot Tests > should render FilterPanel on mobile 1`] = `
<section
  aria-label="Filters"
  class="filter-panel"
>
  <header
    class="filter-header"
  >
    <h2
      class="filter-title"
    >
      Filters
    </h2>
    <section
      class="filter-actions"
    >
      <button
        aria-disabled="true"
        class="filter-reset-btn"
        disabled=""
        type="button"
      >
        Clear filters
      </button>
    </section>
  </header>
  <form
    class="filter-grid"
  >
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="genre-select"
      >
        Genre
      </label>
      <select
        class="filter-select"
        id="genre-select"
      >
        <option
          value=""
        >
          Any
        </option>
        <option
          value="28"
        >
          Action
        </option>
        <option
          value="35"
        >
          Comedy
        </option>
        <option
          value="18"
        >
          Drama
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="year-select"
      >
        Year
      </label>
      <select
        class="filter-select"
        id="year-select"
      >
        <option
          value=""
        >
          Any
        </option>
        <option
          value="2023"
        >
          2023
        </option>
        <option
          value="2022"
        >
          2022
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control filter-control-rating"
    >
      <label
        class="filter-label"
      >
        Rating
      </label>
      <div
        class="dual-range-slider"
      >
        <div
          class="slider-track"
        />
        <div
          class="slider-range"
          style="left: calc(22px + 0 * (100% - 44px)); width: calc(1 * (100% - 44px));"
        />
        <input
          aria-label="Minimum rating"
          class="range-min"
          max="10"
          min="0"
          step="0.5"
          type="range"
          value="0"
        />
        <input
          aria-label="Maximum rating"
          class="range-max"
          max="10"
          min="0"
          step="0.5"
          type="range"
          value="10"
        />
        <div
          class="range-values"
        >
          <span
            class="range-value"
          >
            Min: 
            0.0
          </span>
          <span
            class="range-value"
          >
            Max: 
            10.0
          </span>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="sort-by"
      >
        Sort by
      </label>
      <select
        class="filter-select"
        id="sort-by"
      >
        <option
          value="popularity"
        >
          Popularity
        </option>
        <option
          value="rating"
        >
          Rating
        </option>
        <option
          value="release_date"
        >
          Release date
        </option>
        <option
          value="title"
        >
          Title
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
      >
        Order
      </label>
      <section
        class="order-toggle"
      >
        <button
          aria-pressed="false"
          class="order-btn "
          type="button"
        >
          Asc
        </button>
        <button
          aria-pressed="true"
          class="order-btn is-active"
          type="button"
        >
          Desc
        </button>
      </section>
    </fieldset>
    <fieldset
      class="filter-control favorites-control"
    >
      <label
        class="filter-label"
        for="favorites-only"
      >
        Favorites
      </label>
      <label
        class="favorites-row"
        for="favorites-only"
      >
        <input
          aria-label="Show favorites only"
          class="favorites-switch"
          id="favorites-only"
          type="checkbox"
        />
        <span
          class="favorites-label"
        >
          Favorites only
        </span>
        <span
          class="favorites-chip"
          title="Favorites count"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart"
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
           
          0
        </span>
      </label>
    </fieldset>
  </form>
  <aside
    class="filter-active"
  >
    <small
      class="filter-hint"
    >
      No active filters
    </small>
  </aside>
</section>
`;

exports[`FilterPanel > Snapshot Tests > should render FilterPanel with active filters 1`] = `
<section
  aria-label="Filters"
  class="filter-panel"
>
  <header
    class="filter-header"
  >
    <h2
      class="filter-title"
    >
      Filters
    </h2>
    <section
      class="filter-actions"
    >
      <button
        aria-disabled="false"
        class="filter-reset-btn"
        type="button"
      >
        Clear filters
      </button>
    </section>
  </header>
  <form
    class="filter-grid"
  >
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="genre-select"
      >
        Genre
      </label>
      <select
        class="filter-select"
        id="genre-select"
      >
        <option
          value=""
        >
          Any
        </option>
        <option
          value="28"
        >
          Action
        </option>
        <option
          value="35"
        >
          Comedy
        </option>
        <option
          value="18"
        >
          Drama
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="year-select"
      >
        Year
      </label>
      <select
        class="filter-select"
        id="year-select"
      >
        <option
          value=""
        >
          Any
        </option>
        <option
          value="2023"
        >
          2023
        </option>
        <option
          value="2022"
        >
          2022
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control filter-control-rating"
    >
      <label
        class="filter-label"
      >
        Rating
      </label>
      <section
        class="rating-range"
      >
        <section
          class="rating-field"
        >
          <label
            class="sub-label"
            for="min-rating"
          >
            Min rating
          </label>
          <input
            id="min-rating"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="7"
          />
          <span
            class="rating-value"
          >
            7.0
          </span>
        </section>
        <section
          class="rating-field"
        >
          <label
            class="sub-label"
            for="max-rating"
          >
            Max rating
          </label>
          <input
            id="max-rating"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="10"
          />
          <span
            class="rating-value"
          >
            10.0
          </span>
        </section>
      </section>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="sort-by"
      >
        Sort by
      </label>
      <select
        class="filter-select"
        id="sort-by"
      >
        <option
          value="popularity"
        >
          Popularity
        </option>
        <option
          value="rating"
        >
          Rating
        </option>
        <option
          value="release_date"
        >
          Release date
        </option>
        <option
          value="title"
        >
          Title
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
      >
        Order
      </label>
      <section
        class="order-toggle"
      >
        <button
          aria-pressed="false"
          class="order-btn "
          type="button"
        >
          Asc
        </button>
        <button
          aria-pressed="true"
          class="order-btn is-active"
          type="button"
        >
          Desc
        </button>
      </section>
    </fieldset>
    <fieldset
      class="filter-control favorites-control"
    >
      <label
        class="filter-label"
        for="favorites-only"
      >
        Favorites
      </label>
      <label
        class="favorites-row"
        for="favorites-only"
      >
        <input
          aria-label="Show favorites only"
          class="favorites-switch"
          id="favorites-only"
          type="checkbox"
        />
        <span
          class="favorites-label"
        >
          Favorites only
        </span>
        <span
          class="favorites-chip"
          title="Favorites count"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart"
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
           
          0
        </span>
      </label>
    </fieldset>
  </form>
  <aside
    class="filter-active"
  >
    <section
      class="chips"
    >
      <span
        class="chip"
      >
        Genre:
         
        Action
      </span>
      <span
        class="chip"
      >
        Year: 
        2023
      </span>
      <span
        class="chip"
      >
        Min rating: 
        7
      </span>
    </section>
  </aside>
</section>
`;

exports[`FilterPanel > Snapshot Tests > should render FilterPanel with default state 1`] = `
<section
  aria-label="Filters"
  class="filter-panel"
>
  <header
    class="filter-header"
  >
    <h2
      class="filter-title"
    >
      Filters
    </h2>
    <section
      class="filter-actions"
    >
      <button
        aria-disabled="true"
        class="filter-reset-btn"
        disabled=""
        type="button"
      >
        Clear filters
      </button>
    </section>
  </header>
  <form
    class="filter-grid"
  >
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="genre-select"
      >
        Genre
      </label>
      <select
        class="filter-select"
        id="genre-select"
      >
        <option
          value=""
        >
          Any
        </option>
        <option
          value="28"
        >
          Action
        </option>
        <option
          value="35"
        >
          Comedy
        </option>
        <option
          value="18"
        >
          Drama
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="year-select"
      >
        Year
      </label>
      <select
        class="filter-select"
        id="year-select"
      >
        <option
          value=""
        >
          Any
        </option>
        <option
          value="2023"
        >
          2023
        </option>
        <option
          value="2022"
        >
          2022
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control filter-control-rating"
    >
      <label
        class="filter-label"
      >
        Rating
      </label>
      <section
        class="rating-range"
      >
        <section
          class="rating-field"
        >
          <label
            class="sub-label"
            for="min-rating"
          >
            Min rating
          </label>
          <input
            id="min-rating"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="0"
          />
          <span
            class="rating-value"
          >
            0.0
          </span>
        </section>
        <section
          class="rating-field"
        >
          <label
            class="sub-label"
            for="max-rating"
          >
            Max rating
          </label>
          <input
            id="max-rating"
            max="10"
            min="0"
            step="0.5"
            type="range"
            value="10"
          />
          <span
            class="rating-value"
          >
            10.0
          </span>
        </section>
      </section>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
        for="sort-by"
      >
        Sort by
      </label>
      <select
        class="filter-select"
        id="sort-by"
      >
        <option
          value="popularity"
        >
          Popularity
        </option>
        <option
          value="rating"
        >
          Rating
        </option>
        <option
          value="release_date"
        >
          Release date
        </option>
        <option
          value="title"
        >
          Title
        </option>
      </select>
    </fieldset>
    <fieldset
      class="filter-control"
    >
      <label
        class="filter-label"
      >
        Order
      </label>
      <section
        class="order-toggle"
      >
        <button
          aria-pressed="false"
          class="order-btn "
          type="button"
        >
          Asc
        </button>
        <button
          aria-pressed="true"
          class="order-btn is-active"
          type="button"
        >
          Desc
        </button>
      </section>
    </fieldset>
    <fieldset
      class="filter-control favorites-control"
    >
      <label
        class="filter-label"
        for="favorites-only"
      >
        Favorites
      </label>
      <label
        class="favorites-row"
        for="favorites-only"
      >
        <input
          aria-label="Show favorites only"
          class="favorites-switch"
          id="favorites-only"
          type="checkbox"
        />
        <span
          class="favorites-label"
        >
          Favorites only
        </span>
        <span
          class="favorites-chip"
          title="Favorites count"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart"
            fill="currentColor"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
           
          0
        </span>
      </label>
    </fieldset>
  </form>
  <aside
    class="filter-active"
  >
    <small
      class="filter-hint"
    >
      No active filters
    </small>
  </aside>
</section>
`;
